third_party/kiva-ep/vendor/mathgl-2.4.4/include/mgl2/mgl_pas.pas

/// Set the transparency type (0 - usual, 1 - glass, 2 - lamp)
procedure  mgl_set_transp_type(gr: HMGL;kind: integer); cdecl; external libmgl;
/// Set the transparency on/off.
procedure  mgl_set_alpha(gr: HMGL;enable: integer); cdecl; external libmgl;
/// Set the fog distance or switch it off (if d=0).
procedure  mgl_set_fog(gr: HMGL;d: double;dz: double); cdecl; external libmgl;
/// Set the using of light on/off.
procedure  mgl_set_light(gr: HMGL;enable: integer); cdecl; external libmgl;
/// Switch on/off the specified light source.
procedure  mgl_set_light_n(gr: HMGL;n: integer;enable: integer); cdecl; external libmgl;
/// Add white light source at infinity.
procedure  mgl_add_light(gr: HMGL;n: integer;x: double;y: double;z: double); cdecl; external libmgl;
/// Add light source at infinity (more settings).
procedure  mgl_add_light_ext(gr: HMGL;n: integer;x: double;y: double;z: double;c: char;br: double;ap: double); cdecl; external libmgl;
/// Add local light source.
procedure  mgl_add_light_loc(gr: HMGL;n: integer;x: double;y: double;z: double;dx: double;dy: double;dz: double;c: char;br: double;ap: double); cdecl; external libmgl;
/// Pop transformation matrix from stack
procedure  mgl_mat_pop(gr: HMGL); cdecl; external libmgl;
/// Push transformation matrix into stack
procedure  mgl_mat_push(gr: HMGL); cdecl; external libmgl;
/// Clear up the frame
procedure  mgl_clf(gr: HMGL); cdecl; external libmgl;
/// Clear up the frame but keep fog settings
procedure  mgl_clf_nfog(gr: HMGL); cdecl; external libmgl;
/// Clear up the frame and fill background by specified color
procedure  mgl_clf_rgb(gr: HMGL;r: double;g: double;b: double); cdecl; external libmgl;
/// Clear up the frame and fill background by specified color
procedure  mgl_clf_chr(gr: HMGL;col: char); cdecl; external libmgl;
/// Clear up the frame and fill background by specified color with manual transparency
procedure  mgl_clf_str(gr: HMGL;const col: PChar); cdecl; external libmgl;
/// Load background image
procedure  mgl_load_background(gr: HMGL;const fname: PChar;alpha: double); cdecl; external libmgl;
/// Put further plotting in some region of whole frame.
procedure  mgl_subplot(gr: HMGL;nx: integer;ny: integer;m: integer;const style: PChar); cdecl; external libmgl;
/// Put further plotting in some region of whole frame and shift it by distance {dx,dy}.
procedure  mgl_subplot_d(gr: HMGL;nx: integer;ny: integer;m: integer;const style: PChar;dx: double;dy: double); cdecl; external libmgl;
/// Like MGL_EXPORT mgl_subplot() but "join" several cells
procedure  mgl_multiplot(gr: HMGL;nx: integer;ny: integer;m: integer;dx: integer;dy: integer;const style: PChar); cdecl; external libmgl;
/// Put further plotting in a region of whole frame.
procedure  mgl_inplot(gr: HMGL;x1: double;x2: double;y1: double;y2: double); cdecl; external libmgl;
/// Put further plotting in a region of current subplot/inplot.
procedure  mgl_relplot(gr: HMGL;x1: double;x2: double;y1: double;y2: double); cdecl; external libmgl;
/// Put further plotting in column cell of previous subplot/inplot.
procedure  mgl_columnplot(gr: HMGL;num: integer;ind: integer;d: double); cdecl; external libmgl;
/// Put further plotting in matrix cell of previous subplot/inplot.
procedure  mgl_gridplot(gr: HMGL;nx: integer;ny: integer;m: integer;d: double); cdecl; external libmgl;
/// Put further plotting in cell of stick rotated on angles tet, phi.
procedure  mgl_stickplot(gr: HMGL;num: integer;ind: integer;tet: double;phi: double); cdecl; external libmgl;
/// Add title for current subplot/inplot.
procedure  mgl_title(gr: HMGL;const title: PChar;const stl: PChar;size: double); cdecl; external libmgl;
procedure  mgl_titlew(gr: HMGL;const title: PWideChar;const stl: PChar;size: double); cdecl; external libmgl;
/// Set factor of plot size
procedure  mgl_set_plotfactor(gr: HMGL;val: double); cdecl; external libmgl;
/// Set aspect ratio for further plotting.
procedure  mgl_aspect(gr: HMGL;Ax: double;Ay: double;Az: double); cdecl; external libmgl;
/// Rotate a further plotting.
procedure  mgl_rotate(gr: HMGL;TetX: double;TetZ: double;TetY: double); cdecl; external libmgl;
/// Rotate a further plotting around vector {x,y,z}.
procedure  mgl_rotate_vector(gr: HMGL;Tet: double;x: double;y: double;z: double); cdecl; external libmgl;
/// Set perspective (in range [0,1)) for plot. Set to zero for switching off.
procedure  mgl_perspective(gr: HMGL;val: double); cdecl; external libmgl;
/// Ask to set perspective (in range [0,1)) for plot. Set to zero for switching off.
procedure  mgl_ask_perspective(gr: HMGL;val: double); cdecl; external libmgl;
/// Set angle of view independently from Rotate().
procedure  mgl_view(gr: HMGL;TetX: double;TetZ: double;TetY: double); cdecl; external libmgl;
/// Zoom in/out a part of picture (use mgl_zoom(0, 0, 1, 1) for restore default)
procedure  mgl_zoom(gr: HMGL;x1: double;y1: double;x2: double;y2: double); cdecl; external libmgl;
//-----------------------------------------------------------------------------
/// Callback function for mouse click
/// Set callback functions for drawing and data reloading
/// Set delay for animation in seconds
procedure  mgl_wnd_set_delay(gr: HMGL;dt: double); cdecl; external libmgl;
/// Get delay for animation in seconds
function  mgl_wnd_get_delay(gr: HMGL): double; cdecl; external libmgl;
/// Set window properties
procedure  mgl_setup_window(gr: HMGL;clf_upd: integer;showpos: integer); cdecl; external libmgl;
/// Switch on/off transparency (do not overwrite user settings)
procedure  mgl_wnd_toggle_alpha(gr: HMGL); cdecl; external libmgl;
/// Switch on/off lighting (do not overwrite user settings)
procedure  mgl_wnd_toggle_light(gr: HMGL); cdecl; external libmgl;
/// Switch on/off zooming by mouse
procedure  mgl_wnd_toggle_zoom(gr: HMGL); cdecl; external libmgl;
/// Switch on/off rotation by mouse
procedure  mgl_wnd_toggle_rotate(gr: HMGL); cdecl; external libmgl;
/// Switch off all zooming and rotation
procedure  mgl_wnd_toggle_no(gr: HMGL); cdecl; external libmgl;
/// Update picture by calling user drawing function
procedure  mgl_wnd_update(gr: HMGL); cdecl; external libmgl;
/// Reload user data and update picture
procedure  mgl_wnd_reload(gr: HMGL); cdecl; external libmgl;
/// Adjust size of bitmap to window size
procedure  mgl_wnd_adjust(gr: HMGL); cdecl; external libmgl;
/// Show next frame (if one)
procedure  mgl_wnd_next_frame(gr: HMGL); cdecl; external libmgl;
/// Show previous frame (if one)
procedure  mgl_wnd_prev_frame(gr: HMGL); cdecl; external libmgl;
/// Run slideshow (animation) of frames
procedure  mgl_wnd_animation(gr: HMGL); cdecl; external libmgl;
/// Get last mouse position
procedure  mgl_get_last_mouse_pos(gr: HMGL;x: Pmreal;y: Pmreal;z: Pmreal); cdecl; external libmgl;
//-----------------------------------------------------------------------------
/// Create HMPR object for parsing MGL scripts
function  mgl_create_parser(): HMPR; cdecl; external libmgl;
/// Change counter of HMPR uses (for advanced users only). Non-zero counter prevent automatic object removing.
function  mgl_use_parser(p: HMPR;inc: integer): integer; cdecl; external libmgl;
/// Delete HMPR object
procedure  mgl_delete_parser(p: HMPR); cdecl; external libmgl;
/// Set value for parameter $N
procedure  mgl_parser_add_param(p: HMPR;id: integer;const str: PChar); cdecl; external libmgl;
procedure  mgl_parser_add_paramw(p: HMPR;id: integer;const str: PWideChar); cdecl; external libmgl;
/// Find variable with given name or add a new one
/// NOTE !!! You must not delete obtained data arrays !!!
function  mgl_parser_add_var(p: HMPR;const name: PChar): HMDT; cdecl; external libmgl;
function  mgl_parser_add_varw(p: HMPR;const name: PWideChar): HMDT; cdecl; external libmgl;
/// Find variable with given name or return NULL if no one
/// NOTE !!! You must not delete obtained data arrays !!!
/// Get variable with given id
/// NOTE !!! You must not delete obtained data arrays !!!
/// Get number of variables
function  mgl_parser_num_var(p: HMPR): integer; cdecl; external libmgl;
/// Delete variable with name
procedure  mgl_parser_del_var(p: HMPR;const name: PChar); cdecl; external libmgl;
procedure  mgl_parser_del_varw(p: HMPR;const name: PWideChar); cdecl; external libmgl;
/// Delete all data variables
procedure  mgl_parser_del_all(p: HMPR); cdecl; external libmgl;
/// Load new commands from external dynamic Library (must have "const mglCommand *mgl_cmd_extra" variable)
procedure  mgl_parser_load(pr: HMPR;const dll_name: PChar); cdecl; external libmgl;
/// Parse and draw single line of the MGL script
function  mgl_parse_line(gr: HMGL;p: HMPR;const str: PChar;pos: integer): integer; cdecl; external libmgl;
function  mgl_parse_linew(gr: HMGL;p: HMPR;const str: PWideChar;pos: integer): integer; cdecl; external libmgl;
/// Execute and draw script from the file
/// Execute MGL script text with '\n' separated lines
procedure  mgl_parse_text(gr: HMGL;p: HMPR;const str: PChar); cdecl; external libmgl;
procedure  mgl_parse_textw(gr: HMGL;p: HMPR;const str: PWideChar); cdecl; external libmgl;
/// Restore once flag
procedure  mgl_parser_restore_once(p: HMPR); cdecl; external libmgl;
/// Allow changing size of the picture
procedure  mgl_parser_allow_setsize(p: HMPR;a: integer); cdecl; external libmgl;
/// Allow reading/saving files
procedure  mgl_parser_allow_file_io(p: HMPR;a: integer); cdecl; external libmgl;
/// Allow loading commands from external libraries
procedure  mgl_parser_allow_dll_call(p: HMPR;a: integer); cdecl; external libmgl;
/// Set flag to stop script parsing
procedure  mgl_parser_stop(p: HMPR); cdecl; external libmgl;
/// Return type of command: 0 - not found, 1 - data plot, 2 - other plot,
///		3 - setup, 4 - data handle, 5 - data create, 6 - subplot, 7 - program
///		8 - 1d plot, 9 - 2d plot, 10 - 3d plot, 11 - dd plot, 12 - vector plot
///		13 - axis, 14 - primitives, 15 - axis setup, 16 - text/legend, 17 - data transform
function  mgl_parser_cmd_type(pr: HMPR;const name: PChar): integer; cdecl; external libmgl;
/// Return description of MGL command
function mgl_parser_cmd_desc(pr: HMPR;const name: PChar): PChar; cdecl; external libmgl;
/// Return string of command format (command name and its argument[s])
function mgl_parser_cmd_frmt(pr: HMPR;const name: PChar): PChar; cdecl; external libmgl;
/// Get name of command with nmber n
function mgl_parser_cmd_name(pr: HMPR;id: integer): PChar; cdecl; external libmgl;
/// Get number of defined commands
function  mgl_parser_cmd_num(pr: HMPR): integer; cdecl; external libmgl;
/// Return result of formula evaluation
function  mgl_parser_calc(pr: HMPR;const formula: PChar): HMDT; cdecl; external libmgl;
function  mgl_parser_calcw(pr: HMPR;const formula: PWideChar): HMDT; cdecl; external libmgl;
//-----------------------------------------------------------------------------
{== ../../include/mgl2/addon.h ==}
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
/// Explicit scheme for 1 step of axial diffraction
procedure  mgl_difr_axial(a: Pdual;n: integer;step: integer;q: dual;Border: integer;tmp: Pdual;kk: integer;di: double); cdecl; external libmgl;
procedure  mgl_difr_axial_old(a: Pdual;n: integer;step: integer;q: dual;Border: integer;tmp1: Pdual;tmp2: Pdual;kk: integer;di: double); cdecl; external libmgl;
/// Explicit scheme for 1 step of plane diffraction
procedure  mgl_difr_grid(a: Pdual;n: integer;step: integer;q: dual;Border: integer;tmp: Pdual;kk: integer); cdecl; external libmgl;
procedure  mgl_difr_grid_old(a: Pdual;n: integer;step: integer;q: dual;Border: integer;tmp1: Pdual;tmp2: Pdual;kk: integer); cdecl; external libmgl;
//-----------------------------------------------------------------------------
/// Get random number with Gaussian distribution
function  mgl_gauss_rnd(): double; cdecl; external libmgl;
